# SPNG

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  mkdocs.yml
.github/workflows/: ci-fuzz.yml  codeql-analysis.yml
CMakeModules/: CPM.cmake
Docs/: chunk.md  context.md  errors.md  usage.md
Examples/: example.c
SPNG/: spng.c
Source/: spng.c
Test/: CMakeLists.txt  README.md  fuzz_main.c  spng_read_fuzzer.c  spngt_common.h  target_clones.c  test.cpp  test_png.h  test_spng.h  testsuite.c
docs/: build.md  decode.md  encode.md  migrate-libpng.md  version.md
spng/: spng.c  spng.h
tests/: CMakeLists.txt  framac_stubs.h  spng_write_fuzzer.c  spngt_common.h  test_png.h  testsuite.c
